scroll not working in firefox - again...

--- a/views/about.jade
+++ b/views/about.jade
@@ -4,7 +4,7 @@
   br
   br
   :markdown
-    * Do you have a creeping feeling that your collected cases will disappear in the next PACS upgrade?
+    * Do you have that creeping feeling that your collected cases will disappear in the next PACS upgrade?
     * Would you like to be able to access your cases from anywhere/anything with an internet connection (including your nice, shiny iPad)?
     * Do you want to show off your brilliant diagnosing skills and let the people praise you?
   br
@@ -20,7 +20,7 @@
     tr
       td
         a &#x1f4ac;
-        | &#x2002; Give feedback
+        | &#x2002; Feedback
       td
         a &#x166d;
         | &#x2002; Delete page
@@ -38,6 +38,13 @@
       td
         a &#x2295;
         | &#x2002; Add new image/stack
+    tr
+      td
+        a ◀
+        | &#x2002; Previous page
+      td
+        a ▶
+        | &#x2002; Next page
   br
   hr
   br
