--- a/views/disclaimer.jade
+++ b/views/disclaimer.jade
@@ -1,7 +1,7 @@
 #topleftdiv
 #disclaimer
   :markdown
-    **DISCLAIMER** I'm not a lawyer, and I don't work or live in the US, but from my understanding medicolegal issues can be quite complicated over there, so if you work in such an environment, **PLEASE DON'T CITE** the information you find here as authorative (well, actually this goes for everyone). I don't know if you get off the hook citing an article or book but **PLEASE DOUBLE CHECK ALL REFERENCES** provided, they are for your convenience, but I rely on people's good will that they are correct.
+    **DISCLAIMER** I'm not a lawyer, and I don't work or live in the US, but from my understanding medicolegal issues can be quite complicated over there, so if you work in such an environment, **PLEASE DON'T CITE** the information you find here as authorative (well, actually this goes for everyone). Also **PLEASE DOUBLE CHECK ALL REFERENCES** provided, they are for your convenience, but I rely on people's good will that they are correct.
 
     When you add a case, or actually on every page, you have the option of keeping it private but the default is that everything added to the site is shared with other users. Remember to **ANONYMIZE ALL PATIENT RELATED INFORMATION**. If I see a case which I don't think is suitable for the open collection I will unlist it and contact the author explaining my reasons. I will not remove cases from private collections, unless information stored therein is illegal to keep in databases.
 
