--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,7 @@ html
     link(rel='stylesheet', href='/stylesheets/reset.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
 
-    script(src = '/javascripts/jquery-latest.js')
+    script(src = '/javascripts/jquery-1.7.min.js')
     script(src = '/auth/client')
     script(src = 'http://platform.twitter.com/widgets.js')
     script(src = '/javascripts/jquery.mousewheel.min.js')
