adding lock-sign

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -9,6 +9,14 @@
     float left
     height 25px
     width 55%
+#title>.txt>.textedit
+    margin-right 48%
+#title>.txt>.mdtxt
+    text-align center
+#title>.txt>.md
+    background-image url('/images/OffGray.jpg')
+    margin 0 auto
+    text-align center
 .textedit
     float right
     margin -20px 5px
@@ -225,7 +233,7 @@ body
     line-height 1
     height 100%
     background-image url('/images/OffGray.jpg')
-h1, h2, h3, h4 
+h1, h2
     color #e90
     font-weight 400
 h1, h2, h3, h4, h5, p 
