--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,6 +1,8 @@
 #cheatsheet
     td,th
         padding 5px
+#controls
+    display none
 #disclaimer
     clear both
 #colophon
@@ -10,19 +12,22 @@
     height 25px
     width 55%
 #title>.txt>.textedit
-    margin-right 48%
+    margin-top -3em
 #title>.txt>.mdtxt
     text-align center
 #title>.txt>.md
     background-image url('/images/OffGray.jpg')
     margin 0 auto
     text-align center
+.txt>.abutton
+    margin-bottom 0px
 .textedit
     float right
     margin -20px 5px
+    display none
 .abutton
-    padding-top 3px
     cursor pointer
+    font-size 1.2em
 #centerindiv
     float right
     position relative
@@ -49,10 +54,7 @@
     background #333
 .session
     font-family helvetica, arial
-    padding-top 3px
     cursor pointer
-    float right
-    line-height 1.3
 .big_logo
     color #bca
     font-family "Orbitron"
