--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -5,6 +5,13 @@
     display none
 #disclaimer
     clear both
+#feedbackarea
+    position absolute
+    top 30px
+    width 45%
+    background rgba(50, 50, 50, 0.95)
+#feedbackarea > textarea
+    width 97%
 #colophon
     clear both
 #topleftdiv
@@ -12,7 +19,7 @@
     height 25px
     width 55%
 #title>.txt>.textedit
-    margin-top -3em
+    margin-top -2em
 #title>.txt>.mdtxt
     text-align center
 #title>.txt>.md
