--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,17 +1,34 @@
+a
+    -webkit-user-select none
+    -khtml-user-select none
+    -moz-user-select none
+    -o-user-select none
+    user-select none
 #cheatsheet
     td,th
         padding 5px
-#controls
+#feedbackbutton
+    float left
+    clear both
+    margin-top 10px
+span#lock
+    display none
+span#open
+    display none
+span#controls
+    display none
+.deleteradio
     display none
 #disclaimer
     clear both
+#timestamp
+    font-family helvetica arial
+    font-size 12px
 #feedbackarea
-    position absolute
-    top 30px
-    width 45%
-    background rgba(50, 50, 50, 0.95)
+    clear both
+    width 100%
 #feedbackarea > textarea
-    width 97%
+    width 100%
 #colophon
     clear both
 #topleftdiv
