moving dialogs to layout

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -4,6 +4,10 @@ a
     -moz-user-select none
     -o-user-select none
     user-select none
+.pageimage
+    width 30%
+    margin 1%
+    cursor pointer
 #cheatsheet
     td,th
         padding 5px
