--- a/views/layout.jade
+++ b/views/layout.jade
@@ -33,13 +33,59 @@ html
       != body // this renders the body of an individual view
     #centerindiv
       #centereddiv
-        br
-        h1.damion(style='text-align:left') Create new case
-        h3 - Choose page layout for first page
-        #pagetypes
-          img.pageimage#casestandarpage(src='/images/standardpage.svg', alt='Standard')
-          img.pageimage#casetextpage(src='/images/textpage.svg', alt='Textpage')
-          img.pageimage#caseimagepage(src='/images/imagepage.svg', alt='Imagepage')
+        #addstack_dialog.dialog_box(style='display:none')
+          | Please choose image(s) to upload.
+          br
+          | If multiple images are uploaded together,
+          br
+          | they will be combined to a stack.
+          br
+          br
+          form#uploadform
+            .fileinputs
+              input.file(type='file', name='userfile', id='userfile', multiple='multiple')
+              .fakefile
+                input
+                button
+                  | Browse
+            input.input1(id='addstack_confirm', type='submit', value='Upload file(s)')
+            button(id='addstack_cancel')
+              | cancel
+        #savepage_dialog.dialog_box(style='display:none')
+          button(id='savepage_confirm', type='button')
+            | Save page
+          button(id='savepage_cancel', type='button')
+            | Cancel
+        #newpage_dialog.dialog_box(style='display:none')
+          h2.damion(style='text-align:left') Create new page
+          h4 - Choose page layout.
+          #pagetypes
+            img.pageimage#newpage_standard(src='/images/standardpage.svg', alt='Standard')
+            img.pageimage#newpage_text(src='/images/textpage.svg', alt='Textpage')
+            img.pageimage#newpage_image(src='/images/imagepage.svg', alt='Imagepage')
+          button#newpage_cancel
+            | Cancel
+        #deletepage_dialog.dialog_box(style='display:none')
+          button(id='deletepage_confirm', type='button')
+            | Delete Page
+          button(id='deletepage_cancel', type='button')
+            | Cancel
+        #deleteradio_dialog.dialog_box(style='display:none')
+          | Do you want to delete the selected stack/radio from this page?
+          br
+          br
+          button(type='button', id='deleteradio_confirm')
+            | Delete
+          button(type='button', id='deleteradio_cancel')
+            | Cancel
+        #removeradio_dialog.dialog_box(style='display:none')
+          | Do you want to remove the selected stack/radio from your collection?
+          br
+          br
+          button#removeradio_confirm(type='button')
+            | Remove
+          button#removeradio_cancel(type='button')
+            | Cancel
     #footer
       a(href='/')
         | Home
