new case working

--- a/views/newcase.jade
+++ b/views/newcase.jade
@@ -1,9 +1,7 @@
-#centerindiv
-  #centereddiv
-    br
-    h1.damion(style='text-align:left') Create new case
-    h3 - Choose page layout for first page
-    #pagetypes
-      img.pageimage#casestandarpage(src='/images/standardpage.svg', alt='Standard')
-      img.pageimage#casetextpage(src='/images/textpage.svg', alt='Textpage')
-      img.pageimage#caseimagepage(src='/images/imagepage.svg', alt='Imagepage')
+br
+h1.damion(style='text-align:left') Create new case
+h3 - Choose page layout for first page
+#pagetypes
+  img.pageimage#casestandardpage(src='/images/standardpage.svg', alt='Standard')
+  img.pageimage#casetextpage(src='/images/textpage.svg', alt='Textpage')
+  img.pageimage#caseimagepage(src='/images/imagepage.svg', alt='Imagepage')
