next - how to remove cases

--- a/views/about.jade
+++ b/views/about.jade
@@ -1,6 +1,6 @@
 #topleftdiv
 #about
-  | - A database for radiological cases
+  | <span class=orbitron> RADIOCA.SE </span> -  a database for radiological cases
   br
   br
   :markdown
@@ -49,4 +49,4 @@
   hr
   br
   :markdown
-    Please see [colophon] (./colophon) for further information on the software of this site and [Disclaimer](/disclaimer) for the other stuff.
+    Please see [colophon] (./colophon) for further information on the software of this site and [disclaimer](/disclaimer) for the other stuff.
