--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -65,8 +65,10 @@ span#controls
     margin-bottom 0px
 .textedit
     float right
-    margin -20px 5px
+    margin -20px 0px 0px 0px
     display none
+.paper
+    background-image url("/images/paper/Texture0213.jpg")
 .abutton
     cursor pointer
     font-size 1.2em
@@ -136,8 +138,6 @@ span#controls
 .selected
     border-color #f00
     border solid
-.radio
-    position relative
 .stack
     position relative
     overflow hidden
@@ -153,8 +153,6 @@ span#controls
     position absolute
     top 5px
     right 10px
-.caption
-    margin 5px
 .caption>.md
     margin-top -15px
     color #888
