--- a/views/textpage.jade
+++ b/views/textpage.jade
@@ -19,13 +19,13 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
     textarea.mdtxt(style='display:none')
       ##{title}
     .md
-    a.abutton.textedit.session Edit
+    a.abutton.textedit.session &#x6539;
 #textpage
   .txt
     textarea.mdtxt(style='display:none')
       #{texts}
     .md
-    a.abutton.textedit.session Edit
+    a.abutton.textedit.session &#x6539;
   br
   br
   a(id='prevpage', href='/case/#{cid}/#{prevpage}', style='float: left')
