last before starting off on yesod

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -13,6 +13,8 @@ a
     float left
     width 49%
     position relative
+.radio
+    position relative
 .removeradio
     cursor pointer
     position absolute
@@ -34,8 +36,6 @@ span#lock
 span#open
     display none
 span#controls
-    display none
-.deleteradio
     display none
 #disclaimer
     clear both
@@ -154,6 +154,7 @@ span#controls
     top 5px
     right 10px
 .caption>.md
+    background none
     margin-top -15px
     color #888
 .casesh1
