--- a/views/standardpage.jade
+++ b/views/standardpage.jade
@@ -19,13 +19,13 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
     textarea.mdtxt(style='display:none')
       ##{title}
     .md
-    a.abutton.textedit.session &#x6539;
+    a.abutton.textedit.session 改
 #texts
   .txt
     textarea.mdtxt(style='display:none')
       #{texts}
     .md
-    a.abutton.textedit.session &#x6539;
+    a.abutton.textedit.session 改
   br
   br
   a#prevpage(href='/case/#{cid}/#{prevpage}', style='float: left')
@@ -38,14 +38,14 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
       .stack
         - each i in r.images
           img.stack_image(src='#{i}')
-        a.removeradio.abutton(style='display:none')
-          | &#x166d;
+      a.removeradio.abutton(style='display:none')
+        | &#x166d;
       .caption
         textarea.mdtxt(style='display:none')
           #{r.caption}
         .md
-        a.abutton.textedit.session &#x6539;
-        br
+        a.abutton.textedit.session 改
+      br
   a.abutton#addstack(style='display:none')
     | &#x2295;
   #markdown-help(style='display:none')
