working on stylesheet

--- a/views/about.jade
+++ b/views/about.jade
@@ -3,15 +3,13 @@
   | <span class=orbitron> RADIOCA.SE </span> -  a database for radiological cases
   br
   br
-  :markdown
-    * Do you have that creeping feeling that your collected cases will disappear in the next PACS upgrade?
-    * Would you like to be able to access your cases from anywhere/anything with an internet connection (including your nice, shiny iPad)?
-    * Do you want to show off your brilliant diagnosing skills and let the people praise you?
+  ul 
+    li Do you have that creeping feeling that your collected cases will disappear in the next PACS upgrade?
+    li Would you like to be able to access your cases from anywhere/anything with an internet connection (including your nice, shiny iPad)?
+    li Do you want to show off your brilliant diagnosing skills and let the people praise you?
   br
   p
     | - Just use <span class=orbitron> RADIOCA.SE </span>
-  :markdown
-    This is an invite-only site. If you have been invited you can log in using your twitter account. If you'd like an invitation please send an email saying who you are, containing your twitter username to <info@radioca.se>.
   hr
   br
   h5
@@ -29,7 +27,7 @@
         a ?
         | &#x2002; Markdown help
       td
-        a ＋
+        a 
         | &#x2002; Add new page
     tr
       td
@@ -40,13 +38,16 @@
         | &#x2002; Add new image/stack
     tr
       td
-        a ◀
+        a
         | &#x2002; Previous page
       td
-        a ▶
+        a 
         | &#x2002; Next page
   br
   hr
   br
-  :markdown
-    Please see [colophon] (./colophon) for further information on the software of this site and [disclaimer](/disclaimer) for the other stuff.
+  | Please see
+  a(href="/colophon") colophon
+  |  for the techical stuff and 
+  a(href="/disclaimer") disclaimer
+  |  for the rest.
