--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -101,6 +101,7 @@ span#controls
     cursor pointer
 .big_logo
     color #bca
+//    color #a66337
     font-family "Orbitron"
     font-weight bold
     font-size 50pt
@@ -108,6 +109,7 @@ span#controls
 .orbitron
     font-family "Orbitron"
     color #bca
+//    color #a66337 
 .damion
     font-family "Damion"
 #sl
@@ -157,6 +159,7 @@ span#controls
     background none
     margin-top -15px
     color #888
+//    color #9d9c9c
 .casesh1
     text-align center
 .casesli
@@ -223,7 +226,7 @@ span#controls
 #about
     padding 5%
 textarea
-    width 100%
+    width 99%
     line-height 1.2
     font-family monospace
     font-size 100%
