--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -14,6 +14,8 @@ a
     width 49%
     position relative
 .radio
+    float left
+    width 100%
     position relative
 .removeradio
     cursor pointer
@@ -101,15 +103,14 @@ span#controls
     cursor pointer
 .big_logo
     color #bca
-//    color #a66337
     font-family "Orbitron"
     font-weight bold
     font-size 50pt
     margin-top 30px
 .orbitron
+    color #bca 
     font-family "Orbitron"
-    color #bca
-//    color #a66337 
+//    color #bca
 .damion
     font-family "Damion"
 #sl
@@ -159,7 +160,6 @@ span#controls
     background none
     margin-top -15px
     color #888
-//    color #9d9c9c
 .casesh1
     text-align center
 .casesli
