--- a/views/colophon.jade
+++ b/views/colophon.jade
@@ -1,7 +1,7 @@
 #topleftdiv
 #colophon
   p
-    | Application made with <a href=http://nodejs.org/> node.js </a> and <a href=http://expressjs.com> expressjs</a>, templates in <a href=http://jade-lang.com/>jade</a>, styled with <a href=http://learnboost.github.com/stylus/>stylus</a>. Written in <a href=http://daringfireball.net/projects/markdown/>markdown</a>, backed by <a href=http://redis.io>redis</a>, hosted on <a href=http://linode.com/>linode</a>.
+    | Application made with <a href=http://nodejs.org/> node.js </a> and <a href=http://expressjs.com> express.js</a>, templates in <a href=http://jade-lang.com/>jade</a>, styled with <a href=http://learnboost.github.com/stylus/>stylus</a>. Written in <a href=http://daringfireball.net/projects/markdown/>markdown</a>, backed by <a href=http://redis.io>redis</a>, hosted on <a href=http://linode.com/>linode</a>.
 
 
   p
