--- a/views/disclaimer.jade
+++ b/views/disclaimer.jade
@@ -1,9 +1,10 @@
 #topleftdiv
 #disclaimer
-  :markdown
-    **DISCLAIMER** I'm not a lawyer, and I don't work or live in the US, but from my understanding medicolegal issues can be quite complicated over there, so if you work in such an environment, **PLEASE DON'T CITE** the information you find here as authorative (well, actually this goes for everyone). Also **PLEASE DOUBLE CHECK ALL REFERENCES** provided, they are for your convenience, but I rely on people's good will that they are correct.
+  p
+    | **DISCLAIMER** I'm not a lawyer, and I don't work or live in the US, but from my understanding medicolegal issues can be quite complicated over there, so if you work in such an environment, **PLEASE DON'T CITE** the information you find here as authorative (well, actually this goes for everyone). Also **PLEASE DOUBLE CHECK ALL REFERENCES** provided, they are for your convenience, but I rely on people's good will that they are correct.
+  p
+    | When you add a case, or actually on every page, you have the option of keeping it private but the default is that everything added to the site is shared with other users. Remember to **ANONYMIZE ALL PATIENT RELATED INFORMATION**. If I see a case which I don't think is suitable for the open collection I will unlist it and contact the author explaining my reasons. I will not remove cases from private collections, unless information stored therein is illegal to keep in databases.
 
-    When you add a case, or actually on every page, you have the option of keeping it private but the default is that everything added to the site is shared with other users. Remember to **ANONYMIZE ALL PATIENT RELATED INFORMATION**. If I see a case which I don't think is suitable for the open collection I will unlist it and contact the author explaining my reasons. I will not remove cases from private collections, unless information stored therein is illegal to keep in databases.
-
-    Finally, this is a hobby of mine, I built the site because it's something I hope can be useful during my radiology residency. It is free to use for the moment. In the future, once it's up and running smoothly and has outgrown it's current linode (about 20Gb of storage) I will probably look into models for charging to keep the site growing. I guess it will come to a one-time sign up fee of about $10-20 - roughly half the price of one pay-per view article of an academic publisher - and I would like to think that this site in the end might be more useful than half an article...
+ p
+   | Finally, this is a hobby of mine, I built the site because it's something I hope can be useful during my radiology residency. It is free to use for the moment. In the future, once it's up and running smoothly and has outgrown it's current linode (about 20Gb of storage) I will probably look into models for charging to keep the site growing. I guess it will come to a one-time sign up fee of about $10-20 - roughly half the price of one pay-per view article of an academic publisher - and I would like to think that this site in the end might be more useful than half an article...
 
