--- a/views/standardpage.jade
+++ b/views/standardpage.jade
@@ -36,8 +36,9 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
   - each r in radios
     .radio(id='#{r.ID}')
       .stack
-        - each i in r.images
-          img.stack_image(src='#{i}')
+        - if (r.images)
+          - each i in r.images
+            img.stack_image(src='#{i}')
       a.removeradio.abutton(style='display:none')
         | &#x166d;
       .caption
