--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -164,6 +164,9 @@ span#controls
     text-align center
 .casesli
     text-align center
+.deletecase
+    border solid
+    color red
 #cases_lc
     width 48%
     float left
