--- a/views/about.jade
+++ b/views/about.jade
@@ -20,29 +20,29 @@
         a &#x1f4ac;
         | &#x2002; Feedback
       td
+        a ?
+        | &#x2002; Markdown help
+    tr
+      td
+        a ＋
+        | &#x2002; Add new page
+      td
         a &#x166d;
         | &#x2002; Delete page
     tr
       td
-        a ?
-        | &#x2002; Markdown help
-      td
-        a 
-        | &#x2002; Add new page
-    tr
-      td
-        a {m}
-        | &#x2002; Page metadata
+        a &#x29be; 
+        | &#x2002; Save page
       td
         a &#x2295;
         | &#x2002; Add new image/stack
     tr
       td
-        a
-        | &#x2002; Previous page
+       a ◀
+       | &#x2002; Previous page
       td
-        a 
-        | &#x2002; Next page
+       a ▶ 
+       | &#x2002; Next page
   br
   hr
   br
