--- a/views/cases.jade
+++ b/views/cases.jade
@@ -12,4 +12,7 @@
       | by:
       a(href='https://twitter.com/intent/user?screen_name=#{c.creator}')
         @#{c.creator}
+      - if (c.creator == user) 
+        button.deletecase(ID='#{c.cid}')
+          | DELETE
       br
