--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,12 +23,6 @@ html
       #session
         a.session(id='sign_in') Sign in with twitter
       #userinfo.session(style='display:none')
-        a my cases
-        br
-        a(href='/radios/#{user}') my radios
-        br
-        a my messages
-        br
         a(id='sign_out') sign out
       span#controls
         a.abutton(id='help', title='Help')
@@ -59,6 +53,14 @@ html
             img.pageimage#newpage_text(src='/images/textpage.svg', alt='Textpage')
             img.pageimage#newpage_image(src='/images/imagepage.svg', alt='Imagepage')
           button#newpage_cancel
+            | Cancel
+        #deletecase_dialog.dialog_box(style='display:none')
+          | Do you want to delete this case?
+          br
+          br
+          button#deletecase_confirm(type='button')
+            | Delete
+          button#deletecase_cancel(type='button')
             | Cancel
         #addstack_dialog.dialog_box(style='display:none')
           | Please choose image(s) to upload.
