--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,3 +1,6 @@
+.control
+    margin 0 10px
+    height 24px
 button
     height 21px
     vertical-align top
@@ -33,6 +36,8 @@ a
     float left
     clear both
     margin-top 10px
+#locked
+    height 24px
 span#lock
     display none
 span#open
