--- a/views/imagepage.jade
+++ b/views/imagepage.jade
@@ -7,11 +7,11 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
     @#{creator}
   | &#x2002;
   span#lock
-    a.abutton(id='lock', title='Edit Page')
+    a.abutton#lock(title='Edit Page')
       span#locked
-        | &#128274; &#x2002;
+        img.control(src='/icons/pencil.png')
       span#open
-        | &#128275; &#x2002;
+        img.control(src='/icons/tick.png')
   #created(style='display:none')
     | #{created}
 #title
@@ -19,7 +19,7 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
     textarea.mdtxt(style='display:none')
       ##{title}
     .md
-    a.abutton.textedit.session &#x6539;
+    img.control.textedit.session(src='/icons/pencil.png')
 #radios
   - each r in radios
     .radio(id='#{r.ID}')
@@ -29,16 +29,15 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
       .caption
         textarea.mdtxt(style='display:none')
           #{r.caption}
-        a.abutton.textedit.session &#x6539;
-        .md
+        img.control.textedit.session(src='/icons/pencil.png')
       a.removeradio.abutton(style='display:none')
         | &#x166d;
   a.abutton(id='addstack', style='display:none')
     | &#x2295;
-a(id='prevpage', href='/case/#{cid}/#{prevpage}', style='float: left')
-  | ◀
-a(id='nextpage', href='/case/#{cid}/#{nextpage}', style='float: right')
-  | ▶
+a#prevpage(href='/case/#{cid}/#{prevpage}', style='float: left')
+  img.control(src='/icons/arrow-180.png')
+a#nextpage(href='/case/#{cid}/#{nextpage}', style='float: right')
+  img.control(src='/icons/arrow.png')
   #markdown-help(style='display:none')
     a.session(id='help_cancel')
       | X
